stop horizontal scrolling

--- a/css/style.css
+++ b/css/style.css
@@ -157,3 +157,8 @@ footer {
 	padding-top: 20px;
 	padding-bottom: 20px;
 }
+
+html, body {
+	max-width: 100%;
+	overflow-x: hidden;
+}
